fix overflow issue on IE

--- a/front/style/_base.scss
+++ b/front/style/_base.scss
@@ -4,6 +4,8 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    // hide overflow on IE11
+    -ms-overflow-x: hidden;
 
     font-size: 16px;
     line-height: 24px;
